build improvements